feat: add openclaw agent handoff for external forms
When call_agent_browser() returns None (no claude/openclaw -p CLI available),
apply_external_form() now returns {method: agent_handoff_required} instead of
falling into blind vision fill.

main_pipeline.py detects this signal and writes data/agent_handoff.json with
job, resume, profile, and tracker details so the running openclaw agent can
complete the application directly via playwright-cli.

Claude Code CLI path is completely unaffected — it exits at the claude -p step
and never reaches the handoff logic.

Also updates target_location to Dubai in config.yaml.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 pipeline:
   target_role: "Site Reliability Engineer"  # edit this: job title to search
   target_location:                          # edit this: one or more locations
-    - "Abu Dhabi"
+    - "Dubai"
   target_platforms:                         # linkedin | glassdoor | naukri
     - "linkedin"
   max_jobs_per_run: 3                       # max jobs to process per pipeline run
